tests/ui/diagnostic_namespace/on_unimplemented/do_not_accept_options_of_the_internal_rustc_attribute.stderr
warning: `#[diagnostic::on_unimplemented]` can only be applied to trait definitions
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:22:1
   |
LL | #[diagnostic::on_unimplemented(message = "Not allowed to apply it on a impl")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(misplaced_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: there is no parameter `from_desugaring` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:29:17
   |
LL |     message = "{from_desugaring}{direct}{cause}{integral}{integer}",
   |                 ^^^^^^^^^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument
   = note: `#[warn(malformed_diagnostic_format_literals)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: there is no parameter `direct` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:29:34
   |
LL |     message = "{from_desugaring}{direct}{cause}{integral}{integer}",
   |                                  ^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `cause` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:29:42
   |
LL |     message = "{from_desugaring}{direct}{cause}{integral}{integer}",
   |                                          ^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `integral` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:29:49
   |
LL |     message = "{from_desugaring}{direct}{cause}{integral}{integer}",
   |                                                 ^^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `integer` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:29:59
   |
LL |     message = "{from_desugaring}{direct}{cause}{integral}{integer}",
   |                                                           ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `float` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:35:15
   |
LL |     label = "{float}{_Self}{crate_local}{Trait}{ItemContext}{This}"
   |               ^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `_Self` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:35:22
   |
LL |     label = "{float}{_Self}{crate_local}{Trait}{ItemContext}{This}"
   |                      ^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `crate_local` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:35:29
   |
LL |     label = "{float}{_Self}{crate_local}{Trait}{ItemContext}{This}"
   |                             ^^^^^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `Trait` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:35:42
   |
LL |     label = "{float}{_Self}{crate_local}{Trait}{ItemContext}{This}"
   |                                          ^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `ItemContext` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:35:49
   |
LL |     label = "{float}{_Self}{crate_local}{Trait}{ItemContext}{This}"
   |                                                 ^^^^^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: there is no parameter `This` on trait `Baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:35:62
   |
LL |     label = "{float}{_Self}{crate_local}{Trait}{ItemContext}{This}"
   |                                                              ^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

warning: malformed `on_unimplemented` attribute
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:6:5
   |
LL |     on(Self = "&str"),
   |     ^^^^^^^^^^^^^^^^^ invalid option found here
   |
   = help: only `message`, `note` and `label` are allowed as options
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: malformed `on_unimplemented` attribute
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:11:5
   |
LL |     parent_label = "in this scope",
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid option found here
   |
   = help: only `message`, `note` and `label` are allowed as options

warning: malformed `on_unimplemented` attribute
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:13:5
   |
LL |     append_const_msg
   |     ^^^^^^^^^^^^^^^^ invalid option found here
   |
   = help: only `message`, `note` and `label` are allowed as options

warning: malformed `on_unimplemented` attribute
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:18:1
   |
LL | #[diagnostic::on_unimplemented = "Message"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid option found here
   |
   = help: only `message`, `note` and `label` are allowed as options

error[E0277]: trait has `()` and `i32` as params
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:50:15
   |
LL |     takes_foo(());
   |     --------- ^^ trait has `()` and `i32` as params
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Foo<i32>` is not implemented for `()`
   = note: trait has `()` and `i32` as params
help: this trait has no implementations, consider adding one
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:16:1
   |
LL | trait Foo<T> {}
   | ^^^^^^^^^^^^
note: required by a bound in `takes_foo`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:45:22
   |
LL | fn takes_foo(_: impl Foo<i32>) {}
   |                      ^^^^^^^^ required by this bound in `takes_foo`

error[E0277]: the trait bound `(): Bar` is not satisfied
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:52:15
   |
LL |     takes_bar(());
   |     --------- ^^ the trait `Bar` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `Bar` is implemented for `i32`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:24:1
   |
LL | impl Bar for i32 {}
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `takes_bar`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:46:22
   |
LL | fn takes_bar(_: impl Bar) {}
   |                      ^^^ required by this bound in `takes_bar`

error[E0277]: {from_desugaring}{direct}{cause}{integral}{integer}
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:54:15
   |
LL |     takes_baz(());
   |     --------- ^^ {float}{_Self}{crate_local}{Trait}{ItemContext}{This}
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Baz` is not implemented for `()`
help: this trait has no implementations, consider adding one
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:43:1
   |
LL | trait Baz {}
   | ^^^^^^^^^
note: required by a bound in `takes_baz`
  --> $DIR/do_not_accept_options_of_the_internal_rustc_attribute.rs:47:22
   |
LL | fn takes_baz(_: impl Baz) {}
   |                      ^^^ required by this bound in `takes_baz`

error: aborting due to 3 previous errors; 16 warnings emitted

For more information about this error, try `rustc --explain E0277`.
